@@ -1107,11 +1107,6 @@ listen *:6601 {
     <td>Can use usermode +q</td>
   </tr>
   <tr>
-    <td><div align="center">X</div></td>
-    <td><div align="center">can_addline</div></td>
-    <td>Can use /addline</td>
-  </tr>
-  <tr>
     <td><div align="center">d</div></td>
     <td><div align="center">can_dccdeny</div></td>
     <td>Can use /dccdeny and /undccdeny</td>
