@@ -282,7 +282,6 @@ help Oflags {
 	" q (can_setq)         Can use +q";
 	" H (get_host)         Gets +x on oper up";
 	" W (get_umodew)       Gets +W on oper up";
-	" X (can_addline)      Can use /ADDLINE";
 	" d (can_dccdeny)      Can use /DCCDENY";
 	" ==-------------------------------oOo-----------------------------==";
 };
