@@ -103,7 +103,7 @@ extern int m_pass_Init(ModuleInfo *modinfo), m_userhost_Init(ModuleInfo *modinfo
 extern int m_ison_Init(ModuleInfo *modinfo), m_silence_Init(ModuleInfo *modinfo);
 extern int m_knock_Init(ModuleInfo *modinfo), m_umode2_Init(ModuleInfo *modinfo);
 extern int m_squit_Init(ModuleInfo *modinfo), m_protoctl_Init(ModuleInfo *modinfo);
-extern int m_addline_Init(ModuleInfo *modinfo), m_addmotd_Init(ModuleInfo *modinfo);
+extern int m_addmotd_Init(ModuleInfo *modinfo);
 extern int m_addomotd_Init(ModuleInfo *modinfo), m_wallops_Init(ModuleInfo *modinfo);
 extern int m_admin_Init(ModuleInfo *modinfo), m_globops_Init(ModuleInfo *modinfo);
 extern int m_locops_Init(ModuleInfo *modinfo), m_chatops_Init(ModuleInfo *modinfo);
@@ -152,7 +152,7 @@ extern int m_pass_Load(int module_load), m_userhost_Load(int module_load);
 extern int m_ison_Load(int module_load), m_silence_Load(int module_load);
 extern int m_knock_Load(int module_load), m_umode2_Load(int module_load);
 extern int m_squit_Load(int module_load), m_protoctl_Load(int module_load);
-extern int m_addline_Load(int module_load), m_addmotd_Load(int module_load);
+extern int m_addmotd_Load(int module_load);
 extern int m_addomotd_Load(int module_load), m_wallops_Load(int module_load);
 extern int m_admin_Load(int module_load), m_globops_Load(int module_load);
 extern int m_locops_Load(int module_load), m_chatops_Load(int module_load);
@@ -194,7 +194,7 @@ extern int m_invite_Unload(), m_list_Unload(), m_squit_Unload();
 extern int m_samode_Unload(), m_sjoin_Unload(), m_protoctl_Unload();
 extern int m_pass_Unload(), m_userhost_Unload(), m_knock_Unload();
 extern int m_ison_Unload(), m_silence_Unload();
-extern int m_addline_Unload(), m_addmotd_Unload(), m_addomotd_Unload();
+extern int m_addmotd_Unload(), m_addomotd_Unload();
 extern int m_wallops_Unload(), m_admin_Unload(), m_globops_Unload();
 extern int m_locops_Unload(), m_chatops_Unload(), m_trace_Unload();
 extern int m_netinfo_Unload(), m_links_Unload(), m_help_Unload();
@@ -310,7 +310,6 @@ int    l_commands_Init(ModuleInfo *modinfo)
 	m_umode2_Init(ModCmdsInfo);
 	m_squit_Init(ModCmdsInfo);
 	m_protoctl_Init(ModCmdsInfo);
-	m_addline_Init(ModCmdsInfo);
 	m_addmotd_Init(ModCmdsInfo);
 	m_addomotd_Init(ModCmdsInfo);
 	m_wallops_Init(ModCmdsInfo);
@@ -423,7 +422,6 @@ int    l_commands_Load(int module_load)
 	m_umode2_Load(module_load);
 	m_squit_Load(module_load);
 	m_protoctl_Load(module_load);
-	m_addline_Load(module_load);
 	m_addmotd_Load(module_load);
 	m_addomotd_Load(module_load);
 	m_wallops_Load(module_load);
@@ -536,7 +534,6 @@ int	l_commands_Unload(int module_unload)
 	m_umode2_Unload();
 	m_squit_Unload();
 	m_protoctl_Unload();
-	m_addline_Unload();
 	m_addmotd_Unload();
 	m_addomotd_Unload();
 	m_wallops_Unload();
