@@ -78,7 +78,6 @@ MODVAR int oper_access[] = {
 	OFLAG_OVERRIDE, 'v',
 	OFLAG_UMODEQ, 'q',
 	OFLAG_DCCDENY, 'd',
-	OFLAG_ADDLINE, 'X',
 	0, 0
 };
 
